recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:13: error: unclosed character literal
  } else '{
         ^Tree:13: error: unclosed character literal
  } else '{
         ^Tree:13: error: illegal start of simple expression
  } else '{
         ^Tree:17: error: expected class or object definition
	def subtree(steps:Int, length:Double, angle:Double, shrink:Double)	{
        ^Tree:31: error: expected start of definition
	override def run() {
                 ^Tree:35: error: Unmatched closing brace '}' ignored here
}
^